Worked on the layout of the hero section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-    <div class="Header"><!-- Header section -->
-        
+    <div class="Hero"><!-- Hero section -->
+        <div class="Header">
+            <h3 style="font-size: 24px;">Header logo</h1>
+            <div class="hbuttons">
+                <button>Header link 1</button>
+                <button>Header link 2</button>
+                <button>Header link 3</button>
+            </div>
+        </div>
+        <div class="heroc">
+            <div class="herotext">
+                <p style="font-size: 48px; font-weight: 900;">This website is awesome</p>
+                <p style="font-size: 18px;">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="signup">Sign up</button>
+            </div>
+            <div class="palceholder" style="width: 400px; height: 200px; background-color: grey;">Place holder Img</div>    
+        </div>
     </div>
     <div><!--Section 1-->
 
