--- a/index.html
+++ b/index.html
@@ -23,10 +23,37 @@
                 <p style="font-size: 18px;">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="signup">Sign up</button>
             </div>
-            <div class="palceholder" style="width: 400px; height: 200px; background-color: grey;">Place holder Img</div>    
+            <div class="palceholder" style="width: 500px; height: 250px; background-color: grey;">Place holder Img</div>    
         </div>
     </div>
-    <div><!--Section 1-->
+    <div class="sec2"><!--Section 1-->
+        <p style="font-size: 36px;font-weight: 900;color: #1f2937; margin-bottom: 50px;">Some random information.</p>
+        <div class="boxcont">
+            <div class="contcont">
+                <div class="box">
+
+                </div>
+                <p>this is some subtext under an illustration or an image</p>
+            </div>
+            <div class="contcont">
+                <div class="box">
+
+                </div>
+                <p>this is some subtext under an illustration or an image</p>
+            </div>
+            <div class="contcont">
+                <div class="box">
+
+                </div>
+                <p>this is some subtext under an illustration or an image</p>
+            </div>
+            <div class="contcont">
+                <div class="box">
+
+                </div>
+                <p>this is some subtext under an illustration or an image</p>
+            </div>
+        </div>
 
     </div>
     <div><!--Section 2-->
