--- a/index.html
+++ b/index.html
@@ -26,38 +26,37 @@
             <div class="palceholder" style="width: 500px; height: 250px; background-color: grey;">Place holder Img</div>    
         </div>
     </div>
-    <div class="sec2"><!--Section 1-->
+    <div class="sec1"><!--Section 1-->
         <p style="font-size: 36px;font-weight: 900;color: #1f2937; margin-bottom: 50px;">Some random information.</p>
         <div class="boxcont">
             <div class="contcont">
                 <div class="box">
-
                 </div>
                 <p>this is some subtext under an illustration or an image</p>
             </div>
             <div class="contcont">
                 <div class="box">
-
                 </div>
                 <p>this is some subtext under an illustration or an image</p>
             </div>
             <div class="contcont">
                 <div class="box">
-
                 </div>
                 <p>this is some subtext under an illustration or an image</p>
             </div>
             <div class="contcont">
                 <div class="box">
-
                 </div>
                 <p>this is some subtext under an illustration or an image</p>
             </div>
         </div>
 
     </div>
-    <div><!--Section 2-->
-        
+    <div class="sec2"><!--Section 2-->
+        <div class="area" >
+            <p class="pc">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who Knows? All I know is that it looks nice.</p>
+            <p class="thor">-Thor, God of Thunder</p>
+        </div>
     </div>
     <div><!--Section 3-->
         
