Completed the landing page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="Header">
             <h3 style="font-size: 24px;">Header logo</h1>
             <div class="hbuttons">
-                <button>Header link 1</button>
-                <button>Header link 2</button>
-                <button>Header link 3</button>
+                <button class="hlink">Header link one</button>
+                <button class="hlink">Header link two</button>
+                <button class="hlink">Header link three</button>
             </div>
         </div>
         <div class="heroc">
@@ -58,11 +58,17 @@
             <p class="thor">-Thor, God of Thunder</p>
         </div>
     </div>
-    <div><!--Section 3-->
-        
+    <div class="sec3"><!--Section 3-->
+        <div class="blue">
+            <div class="calltoact">
+                <P class="callH">Call to action! It's time!</P>
+                <P class="call">Sign up for our product by clicking that button right over there!</P>
+            </div>
+            <button class="signupcall">Sign up</button>
+        </div>
     </div>
-    <div><!--Footer-->
-
+    <div class="footer"><!--Footer-->
+        <p class="footer text">Copyright &#169 The Odin Project 2024</p>
     </div>
 </body>
 </html>
